        Reports: prevented deletion of template assets that are not set to inactive
        Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
        Planner: added a button to access Linked Markbook from Edit Lesson Plan page
        Staff: limited Add Staff list to users who are not already staff but have a staff role
        Timetable: added staff duty and activity names to Staff Coverage layer on the timetable

    Bug Fixes
        Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report

    Deprecations
        Removed all functions in functions.php flagged for deprecation since v25

v29.0.00
--------

    Headlines
        A new mobile-responsive Timetable UI with layer visibility toggles
        An improved library borrowing page in Student Profile with tabs and quick lending actions
        An option to add new recipients to existing messages in Messenger
        A color-coded Markbook option for easier visual identification
        A simple Petty Cash system in Finance for tracking small expenses

    Security
        System: added nonce and CSRF token handling to all POST forms

    Tweaks & Additions
        System: removed Date of Birth field from Public Registration when no minimum registration age is set
        System: improved the colour picker to add a pre-set colour palette
        System: added IDD country codes to all countries in the database
        System: added a log entry for resetting password through 'Forgot Password"
        System: updated jQuery UI library to v1.14.1
        Activities: added form group name next to student name in Activity Attendance list
        Admissions: added the ability to re-send the submission email from the Process tab in Edit Application
        Admissions: added the option to display customised success message when student applications are successfully submitted