@@ -42,9 +42,21 @@ use PhpOffice\PhpSpreadsheet\Style\Alignment;
 class SpreadsheetRenderer implements RendererInterface
 {
     protected $path;
+    protected $excel;
+    protected $rowCount;
+    protected $sheet;
 
     public function __construct()
     {
+        // Create new PHPSpreadsheet object
+        $this->excel = new Spreadsheet();
+
+        // Header row count
+        $this->rowCount = 1;
+
+        // Create Sheet
+        $this->excel->setActiveSheetIndex(0) ;
+        $this->sheet = $this->excel->getActiveSheet();
     }
 
     /**
@@ -56,8 +68,8 @@ class SpreadsheetRenderer implements RendererInterface
      */
     public function renderTable(DataTable $table, DataSet $dataSet)
     {
-        // Create new PHPSpreadsheet object
-        $excel = new Spreadsheet();
+
+        static $headersAdded = false;
 
         // Create styles
         $headerStyle = [
@@ -88,81 +100,78 @@ class SpreadsheetRenderer implements RendererInterface
         $rowStripeStyle = ['fill' => [ 'type' => Fill::FILL_SOLID, 'color' => ['rgb' => 'FAFAFA'],]];
 
         // Set document properties
-        $excel->getProperties()->setCreator($table->getMetaData('creator'))
+        $this->excel->getProperties()->setCreator($table->getMetaData('creator'))
             ->setLastModifiedBy($table->getMetaData('creator'))
             ->setTitle($table->getMetaData('name', $table->getTitle()))
             ->setDescription(__('This information is confidential. Generated by Gibbon (https://gibbonedu.org).')) ;
 
-        $excel->setActiveSheetIndex(0) ;
-        $sheet = $excel->getActiveSheet();
-
         if ($dataSet->count() == 0) {
-            $sheet->setCellValue('A1', __('Your query has returned 0 rows.', 'Query Builder'));
-            $sheet->getStyle('A1')->applyFromArray($rowStyle);
+            $this->sheet->setCellValue('A1', __('Your query has returned 0 rows.', 'Query Builder'));
+            $this->sheet->getStyle('A1')->applyFromArray($rowStyle);
         } else {
-            // HEADER ROW
-            $rowCount = 1;
-
             $totalColumnDepth = $table->getTotalColumnDepth();
 
-            for ($i = 0; $i < $totalColumnDepth; $i++) {
-                $sheet->getRowDimension($rowCount)->setRowHeight(24);
+            if (!$headersAdded) { 
+                for ($i = 0; $i < $totalColumnDepth; $i++) {
+                    $this->sheet->getRowDimension($this->rowCount)->setRowHeight(24);
 
-                $cellCount = 0;
-                foreach ($table->getColumns($i) as $columnName => $column) {
-                    if ($column instanceof ActionColumn || $column instanceof ExpandableColumn) continue;
-                    
-                    if ($column->getDepth() < $i) {
-                        $cellCount++;
-                        continue;
-                    }
+                    $cellCount = 0;
+                    foreach ($table->getColumns($i) as $columnName => $column) {
+                        if ($column instanceof ActionColumn || $column instanceof ExpandableColumn) continue;
+                        
+                        if ($column->getDepth() < $i) {
+                            $cellCount++;
+                            continue;
+                        }
 
-                    $alpha = $this->num2alpha($cellCount);
-                    $range = $alpha.$rowCount;
-
-                    $sheet->setCellValue($alpha.$rowCount, $column->getLabel());
-
-                    $colSpan = $column->getTotalSpan();
-                    if ($colSpan > 1) {
-                        $range = $alpha.$rowCount.':'.$this->num2alpha($cellCount+$colSpan-1).$rowCount;
-                        $sheet->mergeCells($range);
-                    }
-
-                    $rowspan = ($column->getTotalDepth() > 1) ? 1 : ($totalColumnDepth - $column->getDepth());
-                    if ($rowspan > 1) {
-                        $sheet->calculateColumnWidths();
-                        $sheet->getColumnDimension($alpha)->setAutoSize(false);
-
-                        $range = $alpha.$rowCount.':'.$alpha.($rowCount+$rowspan-1);
-                        $sheet->mergeCells($range);
-                    }
-
-                    if ($column->getWidth() == 'auto') {
-                        $sheet->getColumnDimension($alpha)->setAutoSize(true);
-                    } else {
-                        $sheet->getColumnDimension($alpha)->setWidth(intval($column->getWidth()));
-                    }
-
-                    $sheet->getStyle($range)->applyFromArray($headerStyle);
-
-                    $cellCount += $colSpan;
-
-                    // Handle details as a separate spreadsheet column
-                    if ($column->hasDetailsFormatter()) {
                         $alpha = $this->num2alpha($cellCount);
-                        $sheet->setCellValue($alpha.$rowCount, $column->getDescription());
-                        $sheet->getStyle($alpha.$rowCount)->applyFromArray($headerStyle);
-                        $sheet->getColumnDimension($alpha)->setAutoSize(true);
+                        $range = $alpha.$this->rowCount;
 
-                        $cellCount++;
+                        $this->sheet->setCellValue($alpha.$this->rowCount, $column->getLabel());
+
+                        $colSpan = $column->getTotalSpan();
+                        if ($colSpan > 1) {
+                            $range = $alpha.$this->rowCount.':'.$this->num2alpha($cellCount+$colSpan-1).$this->rowCount;
+                            $this->sheet->mergeCells($range);
+                        }
+
+                        $rowspan = ($column->getTotalDepth() > 1) ? 1 : ($totalColumnDepth - $column->getDepth());
+                        if ($rowspan > 1) {
+                            $this->sheet->calculateColumnWidths();
+                            $this->sheet->getColumnDimension($alpha)->setAutoSize(false);
+
+                            $range = $alpha.$this->rowCount.':'.$alpha.($this->rowCount+$rowspan-1);
+                            $this->sheet->mergeCells($range);
+                        }
+
+                        if ($column->getWidth() == 'auto') {
+                            $this->sheet->getColumnDimension($alpha)->setAutoSize(true);
+                        } else {
+                            $this->sheet->getColumnDimension($alpha)->setWidth(intval($column->getWidth()));
+                        }
+
+                        $this->sheet->getStyle($range)->applyFromArray($headerStyle);
+
+                        $cellCount += $colSpan;
+
+                        // Handle details as a separate spreadsheet column
+                        if ($column->hasDetailsFormatter()) {
+                            $alpha = $this->num2alpha($cellCount);
+                            $this->sheet->setCellValue($alpha.$this->rowCount, $column->getDescription());
+                            $this->sheet->getStyle($alpha.$this->rowCount)->applyFromArray($headerStyle);
+                            $this->sheet->getColumnDimension($alpha)->setAutoSize(true);
+
+                            $cellCount++;
+                        }
                     }
+                    $this->rowCount++;
                 }
-                $rowCount++;
+                $headersAdded = true;
             }
 
             // TABLE ROWS
             foreach ($dataSet as $data) {
-                $sheet->getRowDimension($rowCount)->setRowHeight(-1);
+                $this->sheet->getRowDimension($this->rowCount)->setRowHeight(-1);
 
                 $row = $this->createTableRow($data, $table);
 
@@ -176,20 +185,19 @@ class SpreadsheetRenderer implements RendererInterface
                     $cellContent = $this->stripTags($column->getOutput($data, false));
 
                     if (is_numeric($cellContent) && strpos($cellContent, ".") === false) {
-                        $sheet->setCellValueExplicit( $alpha.$rowCount, $cellContent, DataType::TYPE_NUMERIC);
+                        $this->sheet->setCellValueExplicit( $alpha.$this->rowCount, $cellContent, DataType::TYPE_NUMERIC);
                     } else {
-                        $sheet->setCellValueExplicit( $alpha.$rowCount, $cellContent, DataType::TYPE_STRING);
+                        $this->sheet->setCellValueExplicit( $alpha.$this->rowCount, $cellContent, DataType::TYPE_STRING);
                     }
-                    $sheet->getStyle($alpha.$rowCount)->applyFromArray($rowStyle);
+                    $this->sheet->getStyle($alpha.$this->rowCount)->applyFromArray($rowStyle);
 
                     $cellStyle = null;
                     if (stripos($row->getClass(), 'error') !== false) $cellStyle = $errorStyle;
                     else if (stripos($row->getClass(), 'warning') !== false) $cellStyle = $warningStyle;
                     else if (stripos($row->getClass(), 'current') !== false) $cellStyle = $currentStyle;
-                    else if ($rowCount % 2 != 0) $cellStyle = $rowStripeStyle;
+                    else if ($this->rowCount % 2 != 0) $cellStyle = $rowStripeStyle;
 
-                    if (!empty($cellStyle)) $sheet->getStyle($alpha.$rowCount)->applyFromArray($cellStyle);
-
+                    if (!empty($cellStyle)) $this->sheet->getStyle($alpha.$this->rowCount)->applyFromArray($cellStyle);
 
                     $cellCount++;
 
@@ -198,67 +206,20 @@ class SpreadsheetRenderer implements RendererInterface
                         $alpha = $this->num2alpha($cellCount);
                         $cellContent = $this->stripTags($column->getDetailsOutput($data));
 
-                        $sheet->setCellValueExplicit( $alpha.$rowCount, $cellContent, DataType::TYPE_STRING);
-                        $sheet->getStyle($alpha.$rowCount)->applyFromArray($rowStyle);
-
+                        $this->sheet->setCellValueExplicit( $alpha.$this->rowCount, $cellContent, DataType::TYPE_STRING);
+                        $this->sheet->getStyle($alpha.$this->rowCount)->applyFromArray($rowStyle);
 
                         $cellCount++;
                     }
                 }
-                $rowCount++;
+                $this->rowCount++;
             }
         }
 
-        $filename = $table->getMetaData('filename');
-        $exportFileType = $table->getMetaData('filetype');
-        if (empty($exportFileType)) $exportFileType = 'Excel2007';
-
-        // FINALIZE THE DOCUMENT SO IT IS READY FOR DOWNLOAD
-        // Set active sheet index to the first sheet, so Excel opens this as the first sheet
-        $excel->setActiveSheetIndex(0);
-
-        switch($exportFileType) {
-            case 'Excel2007':
-                $filename .= '.xlsx';
-                $mimetype = 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';
-                $objWriter = IOFactory::createWriter($excel, 'Xlsx');
-                break;
-            case 'Excel5':
-                $filename .= '.xls';
-                $mimetype = 'application/vnd.ms-excel';
-                $objWriter = IOFactory::createWriter($excel, 'Xls');
-                break;
-            case 'OpenDocument':
-                $filename .= '.ods';
-                $mimetype = 'application/vnd.oasis.opendocument.spreadsheet';
-                $objWriter = IOFactory::createWriter($excel, 'Ods');
-                break;
-            case 'CSV':
-                $filename .= '.csv';
-                $mimetype = 'text/csv';
-                $objWriter = IOFactory::createWriter($excel, 'Csv');
-                break;
+        if ($table->getMetaData('tableCount') <= 1) {
+            $this->save($table);
         }
-
-        // Fix mimetype so that spreadsheet files can be viewed on iOS devices
-        if(stristr($_SERVER['HTTP_USER_AGENT'], 'ipad') !== false or stristr($_SERVER['HTTP_USER_AGENT'], 'iphone') !== false or stristr($_SERVER['HTTP_USER_AGENT'], 'ipod') !== false) {
-            $mimetype = 'application/octet-stream';
-            header('Content-type: application/octet-stream');
-        }
-
-        // Redirect output to a client’s web browser (Excel2007)
-        header('Content-Type: '.$mimetype);
-        header('Content-Disposition: attachment;filename="'.$filename.'"');
-        header('Cache-Control: max-age=1');
-
-        // If you're serving to IE over SSL, then the following may be needed
-        header ('Expires: Mon, 26 Jul 1997 05:00:00 GMT'); // Date in the past
-        header ('Last-Modified: '.gmdate('D, d M Y H:i:s').' GMT'); // always modified
-        header ('Cache-Control: cache, must-revalidate'); // HTTP/1.1
-        header ('Pragma: public'); // HTTP/1.0
-
-        $objWriter->save('php://output');
-
+        
         return;
     }
 
@@ -287,5 +248,58 @@ class SpreadsheetRenderer implements RendererInterface
         }
 
         return $r;
+    }
+
+    public function save(DataTable $table) 
+    {
+        $filename = $table->getMetaData('filename');
+        $exportFileType = $table->getMetaData('filetype');
+        if (empty($exportFileType)) $exportFileType = 'Excel2007';
+
+        // FINALIZE THE DOCUMENT SO IT IS READY FOR DOWNLOAD
+        // Set active sheet index to the first sheet, so Excel opens this as the first sheet
+        $this->excel->setActiveSheetIndex(0);
+
+        switch($exportFileType) {
+            case 'Excel2007':
+                $filename .= '.xlsx';
+                $mimetype = 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';
+                $objWriter = IOFactory::createWriter($this->excel, 'Xlsx');
+                break;
+            case 'Excel5':
+                $filename .= '.xls';
+                $mimetype = 'application/vnd.ms-excel';
+                $objWriter = IOFactory::createWriter($this->excel, 'Xls');
+                break;
+            case 'OpenDocument':
+                $filename .= '.ods';
+                $mimetype = 'application/vnd.oasis.opendocument.spreadsheet';
+                $objWriter = IOFactory::createWriter($this->excel, 'Ods');
+                break;
+            case 'CSV':
+                $filename .= '.csv';
+                $mimetype = 'text/csv';
+                $objWriter = IOFactory::createWriter($this->excel, 'Csv');
+                break;
+        }
+
+        // Fix mimetype so that spreadsheet files can be viewed on iOS devices
+        if(stristr($_SERVER['HTTP_USER_AGENT'], 'ipad') !== false or stristr($_SERVER['HTTP_USER_AGENT'], 'iphone') !== false or stristr($_SERVER['HTTP_USER_AGENT'], 'ipod') !== false) {
+            $mimetype = 'application/octet-stream';
+            header('Content-type: application/octet-stream');
+        }
+
+        // Redirect output to a client’s web browser (Excel2007)
+        header('Content-Type: '.$mimetype);
+        header('Content-Disposition: attachment;filename="'.$filename.'"');
+        header('Cache-Control: max-age=1');
+
+        // If you're serving to IE over SSL, then the following may be needed
+        header ('Expires: Mon, 26 Jul 1997 05:00:00 GMT'); // Date in the past
+        header ('Last-Modified: '.gmdate('D, d M Y H:i:s').' GMT'); // always modified
+        header ('Cache-Control: cache, must-revalidate'); // HTTP/1.1
+        header ('Pragma: public'); // HTTP/1.0
+
+        $objWriter->save('php://output');
     }
 }
