@@ -36,6 +36,7 @@ v30.0.00
         Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
         Planner: added a button to access Linked Markbook from Edit Lesson Plan page
         Staff: limited Add Staff list to users who are not already staff but have a staff role
+        System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
         Timetable: added staff duty and activity names to Staff Coverage layer on the timetable
 
     Bug Fixes
